Fix for XF spacing issue

--- a/waters-aem-frontend/src/styles/global.scss
+++ b/waters-aem-frontend/src/styles/global.scss
@@ -83,6 +83,9 @@ body.no-scroll {
         padding: 0 40px;
     }
 }
+.experiencefragment {
+    padding: 0;
+}
 
 a {
     color: $color-link;
